@@ -1,3 +1,7 @@
+2009-04-01  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Prevent duplicate timestamps in the lastmod field
+
 2009-03-18  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed problem: doktype and no_search were not available
